# npu

./: .gitignore  CMakeLists.txt  build.sh  build_third_party.sh  deploy_310p.sh  furthest_point_sample.cpp  read.txt  run_cpu_sim.sh
cmake/: config.cmake  func.cmake
cmake/modules/: Findalog.cmake
cmake/scripts/: parse_changed_files.py  prepare.sh
op_api/include/: aclnn_furthest_point_sample.h
op_host/: furthest_point_sampling.cpp
op_impl/ai_core/tbe/customize_impl/dynamic/: fps_tiling_data.h  furthest_point_sample.py  furthest_point_sample_kernel.cpp
op_impl/ai_core/tbe/kernel/config/ascend310p/: furthest_point_sample.json
op_kernel/: furthest_point_sample.cpp
op_proto/inc/: furthest_point_sample_proto.h
src/index/gather_custom/op_host/: gather_custom.cpp  gather_custom_tiling.h
src/index/gather_custom/op_kernel/: gather_custom.cpp
src/index/gather_custom_v2/: CMakeLists.txt
src/index/gather_custom_v2/op_kernel/: gather_custom.cpp
src/math/furthest_point_sample/: CMakeLists.txt
src/math/furthest_point_sample/op_host/: furthest_point_sample.cpp  furthest_point_sample_tiling.h
src/math/furthest_point_sample/op_kernel/: furthest_point_sample.cpp
test/host/: fps.cpp  fps.h  furthest_point_sampling_tiling.cpp  furthest_point_sampling_tiling.h
test/kernel/: fps.cpp  furthest_point_sampling_tiling.cpp
